# sonicprobe

./: Cargo.toml  Cargo.toml.bak  README.md
benches/: dot_multiplication.rs
sonicprobe-cli/: Cargo.toml
sonicprobe-cli/src/: cli_args_builder.rs  main.rs  output_format.rs  ui.rs
sonicprobe-cli/src/ui/: audio.rs  entry.rs  filesystem.rs  section.rs  table.rs
sonicprobe-core/: Cargo.toml
sonicprobe-core/benches/: dot_multiplication.rs
sonicprobe-core/src/: dsp.rs  lib.rs  model.rs
sonicprobe-core/src/dsp/: analysis.rs  low_pass_filter.rs  upscaler.rs
sonicprobe-core/src/dsp/analysis/: bit_depth.rs  clipping.rs  dc_offset.rs  dynamic_range.rs  peak.rs  root_mean_square.rs  stereo_correlation.rs  zero_crossing_rate.rs
sonicprobe-core/src/floating_point_math/: dot_product.rs
sonicprobe-core/src/model/: audio_file.rs  bit_depth.rs  channel.rs  decibel.rs  dynamic_range.rs  frequency.rs  sonicprobe_error.rs  stereo_signal.rs
sonicprobe-core/src/model/builders/: channel_builder.rs  stereo_signal_builder.rs
src/: audio_file.rs  audio_utils.rs  builders.rs  channel.rs  channel_builder.rs  circular_buffer.rs  cli_args.rs  constants.rs  dc_offset_builder.rs  dsp.rs  flac_file.rs  floating_point_math.rs  main.rs  model.rs  output_format.rs  rms_builder.rs  sonicprobe_error.rs  stereo_correlation_builder.rs  stereo_signal.rs  true_bit_depth_builder.rs  ui.rs
src/analysis/: actual_bit_depth.rs  clipping_samples.rs  dc_offset.rs  dynamic_range.rs  peak.rs  root_mean_square.rs  zero_crossing_rate.rs
src/audio_file/: analysis.rs  builders.rs  channel.rs  signal_depth.rs  types.rs
src/audio_file/analysis/: actual_bit_depth.rs  clipping_samples.rs  dc_offset.rs  dynamic_range.rs  floating_point_utils.rs  peak.rs  root_mean_square.rs  stereo_correlation.rs  zero_crossing_rate.rs
src/audio_file/builders/: clipping_samples_builder.rs  dc_offset_builder.rs  dr_builder.rs  peak_builder.rs  rms_builder.rs  stereo_correlation_builder.rs  true_bit_depth_builder.rs  zero_crossing_rate_builder.rs
src/audio_file/types/: bit_depth.rs  frequency.rs
src/builders/: clipping_samples_builder.rs  dc_offset_builder.rs  dr_builder.rs  peak_builder.rs  rms_builder.rs  stereo_correlation_builder.rs  true_bit_depth_builder.rs  zero_crossing_rate_builder.rs
src/channel/: builders.rs  channel_builder.rs  dc_offset_builder.rs  low_pass_filter.rs  rms_builder.rs  upsampler.rs
src/channel/builders/: avarage_sample_value_builder.rs  clipping_samples_builder.rs  dc_offset_builder.rs  dr_builder.rs  peak_builder.rs  rms_builder.rs  zero_crossing_rate_builder.rs
src/dsp/: analysis.rs  dot_product.rs  dsp_chain.rs  low_pass_filter.rs  old_upsampler.rs  upsampler.rs
src/dsp/analysis/: bit_depth.rs  clipping.rs  dc_offset.rs  dynamic_range.rs  peak.rs  root_mean_square.rs  stereo_correlation.rs  zero_crossing_rate.rs
src/floating_point_math/: dot_product.rs  floating_point_utils.rs
src/model/: audio_file.rs  bit_depth.rs  builders.rs  channel.rs  cli_args.rs  decibel.rs  dynamic_range.rs  frequency.rs  sonicprobe_error.rs  stereo_signal.rs
src/model/builders/: audio_file_builder.rs  channel_builder.rs  cli_args_builder.rs  stereo_signal_builder.rs
src/ui/: audio.rs  entry.rs  filesystem.rs  table.rs
tools/: make_coeffs.py
