[package]
name = "sonicprobe-core"
version = "0.1.0"
edition = "2021"

[dependencies]
claxon = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.2"

[[bench]]
name = "dot_multiplication"
harness = false

[lints.rust]
# Core Rust warnings
unused = "warn"
dead_code = "warn"
unreachable_code = "warn"
unreachable_patterns = "warn"
unused_must_use = "warn"
unused_variables = "warn"
unused_imports = "warn"

[lints.clippy]
# General philosophy: be strict but not noisy
pedantic = { level = "warn", priority = -1 }

# --- Correctness / bug-prevention (deny = must fix) ---
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
unreachable = "deny"
string_add_assign = "deny"   # avoid implicit string allocations
map_clone = "deny"           # prevents needless clones

# --- Performance lints (warn = prefer fixing, but not blockers) ---
inefficient_to_string = "warn"
redundant_clone = "warn"
vec_init_then_push = "warn"
large_enum_variant = "warn"
boxed_local = "warn"
manual_memcpy = "warn"
needless_collect = "warn"
filter_map = "warn"
map_flatten = "warn"
needless_pass_by_value = "warn"

# --- Idiomatic style (warn for nudging) ---
wildcard_imports = "warn"
too_many_lines = "warn"
option_if_let_else = "warn"
manual_ok_or = "warn"
manual_map = "warn"
ptr_arg = "warn"
implicit_clone = "warn"
match_bool = "warn"
